fix: Burger colors on mobiles

--- a/styles/blocks/_burger-button.scss
+++ b/styles/blocks/_burger-button.scss
@@ -14,7 +14,7 @@
 	@include hover {
 		&::after {
 			background-color: var(--primary-link);
-			box-shadow: 0 -8px var(--primary-link), 0 8px var(--primary-link);
+			box-shadow: 0 -8px var(--primary-dark), 0 8px var(--primary-dark);
 			transition-duration: var(--transition-duration);
 		}
 	}
@@ -26,7 +26,7 @@
 		background-color: var(--primary-dark);
 		border-radius: 2px;
 
-		box-shadow: 0 -8px, 0 8px;
+		box-shadow: 0 -8px var(--primary-dark), 0 8px var(--primary-dark);
 		transition-duration: var(--transition-duration);
 	}
 }
